# aiebu

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  LICENSE  NOTICE  README.md  README.rst  build.gradle  gradle.properties  gradlew  pyrightconfig.json  settings.gradle
.github/workflows/: XRT_aiebu-lnx_build.yml  XRT_aiebu-lnx_nightly.yml  XRT_aiebu-win_build.yml  XRT_aiebu-win_nightly.yml  ci.yml
cmake/: b64.cmake  boost.cmake  clang-tidy.cmake  cpack.cmake  depends.cmake  findpackage.cmake  linux.cmake  md5sum-compare.cmake  python.cmake  settings.cmake  test.cmake  utils.cmake  windows.cmake
cmake/config/: aiebu.fp.in
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt  Makefile  gen-copy.cpp  gen-preemption.cpp  md5sum.cmake  preemption.cpp
publish/: branch.json
publish/gradle/wrapper/: gradle-wrapper.properties
scripts/: CMakeLists.txt  xas  xdas
specification/: CMakeLists.txt
specification/aie2/: isa-spec.yaml
specification/aie2ps/: README.md  isa-spec.yaml
src/cpp/aiebu/: .dir-locals.el  CMakeLists.txt
src/cpp/aiebu/src/: .clang-tidy  CMakeLists.txt
src/cpp/aiebu/src/analyzer/: reporter.cpp  reporter.h  transaction.cpp  transaction.hpp
src/cpp/aiebu/src/assembler/: aiebu_assembler.cpp  assembler.cpp  assembler.h
src/cpp/aiebu/src/common/: assembler_state.cpp  assembler_state.h  code_section.h  symbol.h  uid_md5.h  utils.h  writer.cpp  writer.h
src/cpp/aiebu/src/elf/: elfwriter.cpp  elfwriter.h
src/cpp/aiebu/src/elf/aie2/: aie2_blob_elfwriter.h
src/cpp/aiebu/src/elf/aie2ps/: aie2ps_elfwriter.h
src/cpp/aiebu/src/encoder/: encoder.h
src/cpp/aiebu/src/encoder/aie2/: aie2_blob_encoder.h
src/cpp/aiebu/src/encoder/aie2ps/: aie2ps_encoder.cpp  aie2ps_encoder.h
src/cpp/aiebu/src/include/: aiebu.h  aiebu_assembler.h  aiebu_error.h
src/cpp/aiebu/src/ops/: oparg.h  ops.cpp  ops.h
src/cpp/aiebu/src/preprocessor/: preprocessed_output.h  preprocessor_input.h
src/cpp/aiebu/src/preprocessor/aie2/: aie2_asm_preprocessor.h  aie2_asm_preprocessor_input.cpp  aie2_blob_preprocessed_output.h  aie2_blob_preprocessor.h  aie2_blob_preprocessor_input.cpp  aie2_blob_preprocessor_input.h
src/cpp/aiebu/src/preprocessor/aie2ps/: aie2ps_preprocessed_output.h  aie2ps_preprocessor.h  aie2ps_preprocessor_input.cpp  aie2ps_preprocessor_input.h
src/cpp/aiebu/src/preprocessor/asm/: asm_parser.cpp  asm_parser.h  page.h  pager.cpp  pager.h
src/cpp/aiebu/utils/: CMakeLists.txt
src/cpp/aiebu/utils/asm/: CMakeLists.txt  asm.cpp
src/cpp/aiebu/utils/common/: utils.cpp  utils.h
src/cpp/src/: CMakeLists.txt
src/cpp/src/assembler/: aiebu_assembler.cpp
src/cpp/src/common/: aiebu_error.cpp  assembler_state.cpp  assembler_state.h  symbol.h  utils.h  writer.cpp
src/cpp/src/elf/: elfwriter.cpp  elfwriter.h
src/cpp/src/elf/aie2/: aie2_blob_elfwriter.h
src/cpp/src/elf/aie2ps/: aie2ps_elfwriter.h
src/cpp/src/encoder/: encoder.h
src/cpp/src/encoder/aie2ps/: aie2ps_encoder.cpp
src/cpp/src/include/: aiebu.h  aiebu_assembler.h  aiebu_error.h
src/cpp/src/ops/: ops.cpp  ops.h
src/cpp/src/preprocessor/: preprocessor.h  preprocessor_input.h
src/cpp/src/preprocessor/aie2/: aie2_blob_preprocessed_output.h  aie2_blob_preprocessor.h
src/cpp/src/preprocessor/aie2ps/: aie2ps_preprocessed_output.h  aie2ps_preprocessor_input.h
src/cpp/src/preprocessor/asm/: asm_parser.h  page.h  pager.cpp  pager.h
src/python/: CMakeLists.txt
src/python/aiebu/: control_asm_disasm.py  elf_to_legacy.py  spec_tool.py
src/python/aiebu/ctrlcode/assembler/: assembler.py  assembler_blob.py  assembler_state.py
src/python/aiebu/ctrlcode/common/: __init__.py  column.py  debug.py  elf_section.py  label.py  op_arg.py  operation.py  page.py  parser.py  reader.py  report.py  section.py  symbol.py  util.py  writer.py
src/python/aiebu/ctrlcode/disassembler/: disassembler.py  disassembler_state.py
src/python/aiebu/ctrlcode/ops/: alignOp.py  isa.py  isaOp.py  ucDmaOp.py  ucDmaShimOp.py  wordOp.py
src/python/aiebu/ctrlcode/ops/deserializer/: alignOp_deserializer.py  isaOp_deserializer.py  op_deserializer.py  ucDmaOp_deserializer.py  ucDmaShimOp_deserializer.py  wordOp_deserializer.py
src/python/aiebu/ctrlcode/ops/serializer/: alignOp_serializer.py  isaOp_serializer.py  op_serializer.py  ucDmaOp_serializer.py  ucDmaShimOp_serializer.py  wordOp_serializer.py
src/python/aiebu/ctrlcode/pager/: pager.py
src/python/aiebu/pylibelf/: NOTICE  elf.py
src/python/aiebu/scripts/: decoder.py  ipu_code_decoder.py  ipu_transaction_bo_decoder.py  symbol.py
templates/aie2/: docs.md  stubs.h
templates/aie2ps/: assembler_stub.h  defines.h  docs.html  docs.md  stubs.h  stubs.py
test/: CMakeLists.txt
test/aie2-ctrlcode/: CMakeLists.txt  checksums.txt
test/aie2-ctrlcode/basic/: CMakeLists.txt  README.rst  ctrl_pkt0.b64  external_buffer_id.json  gold.md5  ml_txn.b64  ml_txn.ctrltext.asm
test/aie2-ctrlcode/save-restore/: CMakeLists.txt  checksums.txt
test/cmake-test/: CMakeLists.txt
test/cmake-test/sample/: CMakeLists.txt  aie2_test.cpp
test/control-code/: CMakeLists.txt  col_0.asm  col_0.gold  col_0.txt  nop.asm  nop.gold  nop.txt  pager_test_success.asm  pager_test_success.gold  pager_test_success.txt  run-readelf.sh  sanity.asm  sanity.gold  sanity.txt  sanity_eop.asm  sanity_eop.gold  sanity_eop.txt
test/cpp_test/: CMakeLists.txt
test/cpp_test/aie2ps/eff_net_coal/: gold.md5
test/cpp_test/aie2ps/eff_net_coal/asm/: aie_asm_elfs.asm  aie_asm_init.asm  pdi.asm
test/cpp_test/aie2ps/eff_net_coal/ml_asm/: aie_runtime_control.asm  merged_control.asm
test/cpp_test/aie2ps/eff_net_ctrlpacket/: external_buffer_id.json  gold.md5
test/cpp_test/aie2ps/eff_net_ctrlpacket/asm/: aie_asm_elfs.asm  aie_asm_enable.asm  aie_asm_init.asm
test/cpp_test/aie2ps/eff_net_ctrlpacket/ctrl_pkt/: ctrl_pkt0.b64
test/cpp_test/aie2ps/eff_net_ctrlpacket/ml_asm/: aie_runtime_control.asm  merged_control.asm
test/cpp_test/c_api/: CMakeLists.txt  aie2_test.c  aie2ps_test.c  aie_test_common.h
test/cpp_test/cpp_api/: CMakeLists.txt  aie2_test.cpp  aie2ps_test.cpp
