# SPDX-License-Identifier: MIT
# Copyright (C) 2023 Advanced Micro Devices, Inc.

install(DIRECTORY aie2ps DESTINATION ${AIEBU_SPECIFICATION_INSTALL_DIR} CONFIGURATIONS Debug COMPONENT Runtime)
install(DIRECTORY aie2 DESTINATION ${AIEBU_SPECIFICATION_INSTALL_DIR} CONFIGURATIONS Debug COMPONENT Runtime)
